# otus-python-homework

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: .dockerignore  Dockerfile  main.py  pyproject.toml
homework_04/: config.py  docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py  requirements.txt
homework_05/: app.py  main.py  requirements.txt
homework_05/templates/: base.html  index.html
homework_05/templates/about/: index.html
homework_05/views/: about.py
homework_06/: Dockerfile  app.py  config.py  docker-compose.yaml  main.py  requirements.txt
homework_06/models/: __init__.py  story.py
homework_06/templates/: base.html
homework_06/templates/about/: index.html
homework_06/templates/story/: add.html  confirm-delete.html  detail.html  index.html
homework_06/views/: story.py
homework_07/blog/: admin.py  models.py
homework_07/compendium/: asgi.py  urls.py
homework_08/: manage.py
homework_08/blog/: admin.py  forms.py  models.py  urls.py  views.py
homework_08/blog/migrations/: 0001_initial.py  0002_rename_classlesson_lesson.py
homework_08/blog/templates/: root.html
homework_08/blog/templates/blog/: lesson_form.html  lesson_list.html
homework_08/compendium/: settings.py  urls.py  wsgi.py
