[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["BarashekShaun <eggplantdef@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
